--- a/.github/workflows/benchmarks.yml
+++ b/.github/workflows/benchmarks.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
   pull_request:
   schedule:
-    - cron: '0 */8 * * *' # Run workflow threee times a day
+    - cron: "0 */8 * * *" # Run workflow threee times a day
 env:
   DOTNET_SKIP_FIRST_TIME_EXPERIENCE: true
   DOTNET_CLI_TELEMETRY_OPTOUT: true
@@ -17,7 +17,6 @@ jobs:
       fail-fast: false
     runs-on: windows-latest
     steps:
-
       - name: Checkout
         uses: actions/checkout@v3
         with:
@@ -28,21 +27,26 @@ jobs:
         run: |
           .\code\scripts\perftests\testCases\${{matrix.test_script}}.ps1
           Rename-Item -Path "results.csv" -NewName "${{matrix.test_script}}.csv"
-          
+
       - name: Upload benchmark results
         uses: actions/upload-artifact@v3
         with:
           name: ${{matrix.test_script}}
           path: ${{matrix.test_script}}.csv
-          
+
   benchmarks_linux:
     strategy:
       matrix:
-        test_script: [LargeAppCPM64-142722b, LargeAppCPM64-nostaticgraph-142722b, OrchardCore-5dbd92c, Orleans-eda972a]
+        test_script:
+          [
+            LargeAppCPM64-142722b,
+            LargeAppCPM64-nostaticgraph-142722b,
+            OrchardCore-5dbd92c,
+            Orleans-eda972a,
+          ]
       fail-fast: false
     runs-on: ubuntu-latest
     steps:
-
       - name: Checkout
         uses: actions/checkout@v3
         with:
@@ -53,7 +57,7 @@ jobs:
         run: |
           .\code\scripts\perftests\testCases\${{matrix.test_script}}.ps1
           Rename-Item -Path "results.csv" -NewName "${{matrix.test_script}}.csv"
-          
+
       - name: Upload benchmark results
         uses: actions/upload-artifact@v3
         with:
@@ -63,12 +67,11 @@ jobs:
   process_data:
     # Only run on main repository
     # Scheduled workflows do not have information about fork status, hence the hardcoded check
-    if: github.repository == 'G-Research/NuPerfMonitor' && github.ref == 'refs/heads/main'
+    if: github.repository == 'G-Research/DotNetPerfMonitor' && github.ref == 'refs/heads/main'
     environment: updater
     runs-on: ubuntu-latest
     needs: [benchmarks_windows, benchmarks_linux]
     steps:
-
       - name: Install Step CLI
         env:
           VERSION: 0.19.0
@@ -76,7 +79,7 @@ jobs:
           curl -sLO https://github.com/smallstep/cli/releases/download/v${VERSION}/step-cli_${VERSION}_amd64.deb
           sudo dpkg -i step-cli_${VERSION}_amd64.deb
           rm step-cli_${VERSION}_amd64.deb
-          
+
       - name: Create access token
         id: token
         env:
@@ -100,10 +103,10 @@ jobs:
 
       - name: Install dependencies
         run: pip3 install -r requirements.txt
-        
+
       - uses: actions/download-artifact@v3
         with:
-         path: artifacts
+          path: artifacts
 
       - name: Process data
         shell: pwsh
@@ -146,11 +149,11 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           OWNER: ${{ github.repository_owner }}
           REPO: ${{ github.event.repository.name }}
-          
+
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
-          file_pattern: 'data.csv'
-          commit_author: 'github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>'
+          file_pattern: "data.csv"
+          commit_author: "github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>"
 
       - name: Upload data
         if: steps.alerts.outputs.file_exists == 'true'
