updated workflow branches

--- a/.github/workflows/pylint.yaml
+++ b/.github/workflows/pylint.yaml
@@ -2,9 +2,9 @@ name: Pylint Code analysis
 
 on:
   push:
-    branches: ["main", "workflows"]
+    branches: ["*"]
   pull_request:
-    branches: ["main", "workflows"]
+    branches: ["*"]
 
 jobs:
   linter:
