--- a/.github/workflows/dashboard.yaml
+++ b/.github/workflows/dashboard.yaml
@@ -17,7 +17,9 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: 16
-          cache: "pnpm"
+
+      - name: Install pnpm
+        run: npm install -g pnpm
 
       - name: Navigate to Nuxt project folder
         run: cd _dashboard/DotNetPerfMonitor
