--- a/.github/workflows/dashboard.yaml
+++ b/.github/workflows/dashboard.yaml
@@ -13,7 +13,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Set up Node.js and pnpm
+      - name: Set up NodeJS
         uses: actions/setup-node@v2
         with:
           node-version: 16
@@ -22,10 +22,12 @@ jobs:
         run: npm install -g pnpm
 
       - name: Navigate to Nuxt project folder
-        run: cd _dashboard/DotNetPerfMonitor
+        run: |
+          cd _dashboard/DotNetPerfMonitor/
+          ls
 
       - name: Install dependencies
-        run: pnpm install --frozen-lockfile
+        run: pnpm install --frozen-lockfile --ignore-scripts
 
       - name: Generate static files
         run: pnpm run generate
