--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,2 @@
-astroid==2.15.5
-dill==0.3.6
-isort==5.12.0
-lazy-object-proxy==1.9.0
-mccabe==0.7.0
-numpy==1.25.0
-packaging==23.1
-pandas==2.0.3
-platformdirs==3.8.0
-plotly==5.15.0
-pylint==2.17.4
-python-dateutil==2.8.2
-pytz==2023.3
-six==1.16.0
-tenacity==8.2.2
-tomlkit==0.11.8
-tzdata==2023.3
-wrapt==1.15.0
+plotly
+pandas
