--- a/.github/workflows/pylint.yaml
+++ b/.github/workflows/pylint.yaml
@@ -11,17 +11,9 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Install Pylint
-        run: python -m pip install --upgrade pip pylint
-
-      - name: Setup Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.11
-
       - name: Install dependencies
         run: |
-          pip install -r requirements.txt
+          pip3 install -r requirements.txt
 
       - name: Run linter
         run: pylint $(git ls-files '*.py')
