change `cd` to `working-directory`
Co-authored-by: Marcin Krystianc <marcin.krystianc@gmail.com>

--- a/.github/workflows/dashboard.yaml
+++ b/.github/workflows/dashboard.yaml
@@ -24,7 +24,7 @@ jobs:
 
       - name: Navigate to Nuxt project folder & Install dependencies
         run: |
-          cd _dashboard/DotNetPerfMonitor/
+          working-directory: _dashboard/DotNetPerfMonitor/
           pnpm install --frozen-lockfile --ignore-scripts
 
       - name: Generate static files
