--- a/.github/workflows/dashboard.yaml
+++ b/.github/workflows/dashboard.yaml
@@ -23,13 +23,13 @@ jobs:
         run: npm install -g pnpm
 
       - name: Navigate to Nuxt project folder & Install dependencies
+        working-directory: ./_dashboard/DotNetPerfMonitor/
         run: |
-          working-directory: _dashboard/DotNetPerfMonitor/
           pnpm install --frozen-lockfile --ignore-scripts
 
       - name: Generate static files
+        working-directory: ./_dashboard/DotNetPerfMonitor/
         run: |
-          working-directory: _dashboard/DotNetPerfMonitor/
           pnpm run generate
 
       - name: Deploy to GitHub Pages
