--- a/.github/workflows/dashboard.yaml
+++ b/.github/workflows/dashboard.yaml
@@ -38,5 +38,6 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          destination_dir: ./_dashboard/DotNetPerfMonitor/dist
+          publish_dir: _dashboard/DotNetPerfMonitor/dist/
+          destination_dir: _dashboard/DotNetPerfMonitor/dist/
           commit_message: ${{ github.event.head_commit.message }}
