--- a/_dashboard/DotNetPerfMonitor/package.json
+++ b/_dashboard/DotNetPerfMonitor/package.json
@@ -6,7 +6,8 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "deploy": "gh-pages -d ./dist"
   },
   "devDependencies": {
     "@element-plus/nuxt": "^1.0.5",
@@ -14,6 +15,7 @@
     "@nuxthq/ui": "^2.5.0",
     "@nuxtjs/google-fonts": "^3.0.1",
     "@types/node": "^18",
-    "nuxt": "^3.6.2"
+    "nuxt": "^3.6.2",
+    "gh-pages": "^5.0.0"
   }
 }
