--- a/.github/workflows/dashboard.yaml
+++ b/.github/workflows/dashboard.yaml
@@ -35,4 +35,4 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           keep_files: true
-          destination_dir: _dashboard/DotNetPerfMonitor/dist
+          publish_dir: _dashboard/DotNetPerfMonitor/dist
