--- a/.github/workflows/dashboard.yaml
+++ b/.github/workflows/dashboard.yaml
@@ -25,7 +25,7 @@ jobs:
         run: npm install -g pnpm
 
       - name: Install Dependencies and Generate Static Content
-        working-directory: _dashboard/DotNetPerfMonitor/
+        working-directory: ./dashboard/DotNetPerfMonitor/
         run: |
           pnpm install --frozen-lockfile --ignore-scripts
           pnpm run generate
@@ -35,4 +35,8 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           keep_files: true
-          publish_dir: _dashboard/DotNetPerfMonitor/dist
+          publish_branch: dashboard-setup
+          publish_dir: ./dashboard/DotNetPerfMonitor/dist/
+          commit_message: ${{ github.event.head_commit.message }}
+          user_name: "github-actions[bot]"
+          user_email: "github-actions[bot]@users.noreply.github.com"
