--- a/.github/workflows/dashboard.yaml
+++ b/.github/workflows/dashboard.yaml
@@ -35,7 +35,7 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           keep_files: true
-          publish_branch: dashboard-setup
+          publish_branch: dashboard-deployment
           publish_dir: ./dashboard/DotNetPerfMonitor/dist/
           commit_message: ${{ github.event.head_commit.message }}
           user_name: "github-actions[bot]"
