--- a/.github/workflows/dashboard.yaml
+++ b/.github/workflows/dashboard.yaml
@@ -30,13 +30,12 @@ jobs:
           pnpm install --frozen-lockfile --ignore-scripts
           pnpm run generate
 
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3.9.3
+      - name: Deploy to GitHub Pages 🚀
+        uses: JamesIves/github-pages-deploy-action@v4
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          keep_files: true
-          publish_branch: dashboard-deployment
-          publish_dir: ./dashboard/DotNetPerfMonitor/dist/
-          commit_message: ${{ github.event.head_commit.message }}
-          user_name: "github-actions[bot]"
-          user_email: "github-actions[bot]@users.noreply.github.com"
+          token: ${{ secrets.GITHUB_TOKEN }}
+          branch: dashboard-deployment
+          folder: dashboard/DotNetPerfMonitor/dist/
+          commit-message: ${{ github.event.head_commit.message }}
+          git-config-name: "github-actions[bot]"
+          git-config-email: "github-actions[bot]@users.noreply.github.com"
