--- a/_dashboard/DotNetPerfMonitor/tsconfig.json
+++ b/_dashboard/DotNetPerfMonitor/tsconfig.json
@@ -1,4 +1,8 @@
 {
   // https://nuxt.com/docs/guide/concepts/typescript
-  "extends": "./.nuxt/tsconfig.json"
+  "extends": "./.nuxt/tsconfig.json",
+  "compilerOptions": {
+    "target": "es6"
+    // ... your other options
+  }
 }
