--- a/.github/workflows/dashboard.yaml
+++ b/.github/workflows/dashboard.yaml
@@ -6,6 +6,9 @@ name: Deploy to GitHub Pages
 
 on:
   push:
+    branches:
+      - main
+      - dashboard-ui
   pull_request:
 
   # Allows you to run this workflow manually from the Actions tab
