--- a/.github/workflows/dashboard.yaml
+++ b/.github/workflows/dashboard.yaml
@@ -6,9 +6,6 @@ name: Deploy to GitHub Pages
 
 on:
   push:
-    branches:
-      - main
-      - dashboard-ui
   pull_request:
 
   # Allows you to run this workflow manually from the Actions tab
@@ -55,6 +52,7 @@ jobs:
 
   # Deployment job
   deploy:
+    if: github.repository == 'G-Research/DotNetPerfMonitor' && github.ref == 'refs/heads/main'
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
