--- a/_dashboard/DotNetPerfMonitor/package.json
+++ b/_dashboard/DotNetPerfMonitor/package.json
@@ -15,12 +15,14 @@
     "@nuxthq/ui": "^2.5.0",
     "@nuxtjs/google-fonts": "^3.0.1",
     "@types/node": "^18",
+    "@types/papaparse": "^5.3.7",
     "gh-pages": "^5.0.0",
     "nuxt": "^3.6.2"
   },
   "dependencies": {
-    "apexcharts": "^3.41.0",
+    "@amcharts/amcharts5": "^5.4.1",
     "chart.js": "^4.3.0",
-    "vue-apexcharts": "^1.6.2"
+    "papaparse": "^5.4.1",
+    "vue-chartjs": "^5.2.0"
   }
 }
