--- a/_dashboard/DotNetPerfMonitor/package.json
+++ b/_dashboard/DotNetPerfMonitor/package.json
@@ -23,6 +23,10 @@
   "dependencies": {
     "@amcharts/amcharts5": "^5.4.1",
     "chart.js": "^4.3.0",
+    "chartjs-adapter-date-fns": "^3.0.0",
+    "chartjs-adapter-dayjs-4": "^1.0.4",
+    "date-fns": "^2.30.0",
+    "dayjs": "^1.11.9",
     "papaparse": "^5.4.1",
     "vue-chartjs": "^5.2.0"
   }
