Improved data Visualization and Data view filtering (#16)
* setup dashboard sidebar tabs statistics enhanced theming

* removed ssr falg

* rm main-only deploy

* added branches

* added routes gen in build

* integrated regressions page

* filtering issues

* filtering user display

* adding multiple skeletons

* setting up parser composable

* setup data extracters composables

* implementing benchmark grouper composables

* rm generate routes

* enable target and payload ex

* added scenario filters

* enhanced scenarios filtering

* redesign chart and implemented data explorer page

* add generate

* reconf

* enable target

* payload extraction config

* ssr config

* config format

* disabled ssr

* improving data visualization

* use logarithmic scale, removed unecessary pages, enhanced filtering

* integrated extracters

* added dynamic colors and view filter

* fixed spacing in sidebar

* fixed spacing in sidebar

--- a/_dashboard/DotNetPerfMonitor/package.json
+++ b/_dashboard/DotNetPerfMonitor/package.json
@@ -17,11 +17,16 @@
     "@types/node": "^18",
     "@types/papaparse": "^5.3.7",
     "gh-pages": "^5.0.0",
-    "nuxt": "^3.6.2"
+    "nuxt": "^3.6.2",
+    "nuxt-plotly": "^1.0.9"
   },
   "dependencies": {
     "@amcharts/amcharts5": "^5.4.1",
     "chart.js": "^4.3.0",
+    "chartjs-adapter-date-fns": "^3.0.0",
+    "chartjs-adapter-dayjs-4": "^1.0.4",
+    "date-fns": "^2.30.0",
+    "dayjs": "^1.11.9",
     "papaparse": "^5.4.1",
     "vue-chartjs": "^5.2.0"
   }
