--- a/_dashboard/DotNetPerfMonitor/package.json
+++ b/_dashboard/DotNetPerfMonitor/package.json
@@ -25,6 +25,7 @@
     "chart.js": "^4.3.0",
     "chartjs-adapter-date-fns": "^3.0.0",
     "chartjs-adapter-dayjs-4": "^1.0.4",
+    "chartjs-plugin-zoom": "^2.0.1",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.9",
     "papaparse": "^5.4.1",
