--- a/.github/workflows/pylint.yaml
+++ b/.github/workflows/pylint.yaml
@@ -12,6 +12,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install dependencies
+        working-directory: scripts/processors/
         run: |
           pip3 install -r requirements.txt
 
