--- a/_dashboard/DotNetPerfMonitor/public/app_config.json
+++ b/_dashboard/DotNetPerfMonitor/public/app_config.json
@@ -2,23 +2,29 @@
   "name": "DotNetPerfMonitor",
   "version": "1.0.0",
   "description": "DotNetPerfMonitor....",
-  "components": ["nuget", "msbuild", "fsharp", "csharp"],
-  "components_display": ["NuGet", "MSBuild", "F#", "C#"],
-  "components_data": {
+  "components": [
+    { "uid": "nuget", "name": "NuGet" },
+    { "uid": "msbuild", "name": "MSBuild" },
+    { "uid": "fsharp", "name": "F#" },
+    { "uid": "csharp", "name": "C#" },
+    { "uid": "aspnet", "name": "ASP.NET" },
+    { "uid": "xunit", "name": "Xunit" }
+  ],
+  "data": {
     "nuget": {
       "data": "https://raw.githubusercontent.com/G-Research/DotNetPerfMonitor/main/data/nuget.csv",
       "benchmarks": [
         {
           "name": "LargeAppCPM64-142722b",
-          "color": "rgb(255, 99, 132)"
+          "color": "rgb(144, 12, 63)"
         },
         {
           "name": "LargeAppCPM64-nostaticgraph-142722b",
-          "color": "rgb(255, 159, 64)"
+          "color": "rgb(248, 222, 34)"
         },
         {
           "name": "LargeAppCPM64-142722b",
-          "color": "rgb(255, 159, 50)"
+          "color": "rgb(117, 194, 246)"
         },
         {
           "name": "LargeAppCPM-142722b",
@@ -26,11 +32,11 @@
         },
         {
           "name": "OrchardCore-5dbd92c",
-          "color": "rgb(255, 99, 132)"
+          "color": "rgb(255, 184, 76)"
         },
         {
           "name": "Orleans-eda972a",
-          "color": "rgb(255, 22, 132)"
+          "color": "rgb(44, 211, 225)"
         },
         {
           "name": "NuGetClient-win-d76a117",
