--- a/.github/workflows/benchmark_msbuild.yaml
+++ b/.github/workflows/benchmark_msbuild.yaml
@@ -34,13 +34,20 @@ jobs:
 
       #__________THEN WE CLONE TEST CODE REPO__________#
       #(This is kind of checking out to a different repo)#
-      - name: checkout to test code repo
-        run: |
-          git clone $TEST_SOLUTION_REPO_URL
-          cd $TEST_SOLUTION_DIR
+      #   - name: checkout to test code repo
+      #     run: |
+      #       git clone $TEST_SOLUTION_REPO_URL
+      #       cd $TEST_SOLUTION_DIR
 
       #__________WE GET THINGS READY TO RUN PYTHON SCRIPTS__________#
       - name: setup python
         uses: actions/setup-python@v4
         with:
           python-version: 3.11
+
+      #__________FINALLY WE RUN BENCHMARK TEST AND MEASURE EXECUTION TIME__________#
+      - name: run benchmark for ${{ matrix.OS }}
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          python run_benchmark.py --base-version-url $BASE_VERSION --daily-version-url $DAILY_VERSION
