--- a/.github/workflows/benchmark_msbuild.yaml
+++ b/.github/workflows/benchmark_msbuild.yaml
@@ -47,8 +47,8 @@ jobs:
 
       #__________FINALLY WE RUN BENCHMARK TEST AND MEASURE EXECUTION TIME__________#
       - name: run benchmark for ${{ matrix.OS }}
-        working-directory: scripts/benchmark
+        working-directory: scripts/test_cases/
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          python run_benchmark.py --base-version-url $BASE_VERSION --daily-version-url $DAILY_VERSION
+          python msbuild_performance_test.py --os ${{matrix.OS}} --base-version-url ${{matrix.BASE_VERSION}} --daily-version-url ${{matrix.DAILY_VERSION}}
