removing ASP.NET and xunit from the tabs

--- a/_dashboard/DotNetPerfMonitor/public/app_config.json
+++ b/_dashboard/DotNetPerfMonitor/public/app_config.json
@@ -6,9 +6,7 @@
     { "uid": "nuget", "name": "NuGet" },
     { "uid": "msbuild", "name": "MSBuild" },
     { "uid": "fsharp", "name": "F#" },
-    { "uid": "csharp", "name": "C#" },
-    { "uid": "aspnet", "name": "ASP.NET" },
-    { "uid": "xunit", "name": "Xunit" }
+    { "uid": "csharp", "name": "C#" }
   ],
   "data": {
     "nuget": {
