--- a/.github/workflows/benchmark_msbuild.yaml
+++ b/.github/workflows/benchmark_msbuild.yaml
@@ -16,33 +16,16 @@ env:
   TEST_SOLUTION_DIR: "SimpleAppWithLibs"
 
 jobs:
-  msbuild_benchmarks:
+  msbuild_benchmarks_windows:
     strategy:
       matrix:
-        OS: [windows-latest, ubuntu-latest]
-        BASE_VERSION:
-          [
-            "https://download.visualstudio.microsoft.com/download/pr/1fb808dc-d017-4460-94f8-bf1ac83e6cd8/756b301e714755e411b84684b885a516/dotnet-sdk-7.0.100-win-x64.zip",
-            "https://download.visualstudio.microsoft.com/download/pr/cd0d0a4d-2a6a-4d0d-b42e-dfd3b880e222/008a93f83aba6d1acf75ded3d2cfba24/dotnet-sdk-6.0.400-linux-x64.tar.gz",
-          ]
-        DAILY_VERSION:
-          [
-            "https://aka.ms/dotnet/8.0.1xx/daily/dotnet-sdk-win-x64.zip",
-            "https://aka.ms/dotnet/8.0.1xx/daily/dotnet-sdk-linux-x64.tar.gz",
-          ]
+        TEST_CASES: []
       fail-fast: false
-    runs-on: ${{ matrix.OS }}
+    runs-on: windows-latest
     steps:
       #__________WE CHECK OUT TO WORKING REPO__________#
       - name: Checkout
         uses: actions/checkout@v3
-
-      #__________THEN WE CLONE TEST CODE REPO__________#
-      #(This is kind of checking out to a different repo)#
-      #   - name: checkout to test code repo
-      #     run: |
-      #       git clone $TEST_SOLUTION_REPO_URL
-      #       cd $TEST_SOLUTION_DIR
 
       #__________WE GET THINGS READY TO RUN PYTHON SCRIPTS__________#
       - name: setup python
@@ -51,9 +34,34 @@ jobs:
           python-version: 3.11
 
       #__________FINALLY WE RUN BENCHMARK TEST AND MEASURE EXECUTION TIME__________#
-      - name: run benchmark for ${{ matrix.OS }}
+      - name: run benchmark for windows
         working-directory: scripts/test_cases/
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          python msbuild_performance_test.py --os ${{matrix.OS}} --base-version-url ${{matrix.BASE_VERSION}} --daily-version-url ${{matrix.DAILY_VERSION}} --solution-repo-url ${{env.TEST_SOLUTION_REPO_URL}} --solution-dir ${{env.TEST_SOLUTION_DIR}}
+          python msbuild_performance_test_windows.py
+
+  msbuild_benchmarks_linux:
+    strategy:
+      matrix:
+        TEST_CASES: []
+      fail-fast: false
+    runs-on: ubuntu-latest
+    steps:
+      #__________WE CHECK OUT TO WORKING REPO__________#
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      #__________WE GET THINGS READY TO RUN PYTHON SCRIPTS__________#
+      - name: setup python
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.11
+
+      #__________FINALLY WE RUN BENCHMARK TEST AND MEASURE EXECUTION TIME__________#
+      - name: run benchmark for windows
+        working-directory: scripts/test_cases/
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          python msbuild_performance_test_linux.py
