--- a/.github/workflows/benchmark_msbuild.yaml
+++ b/.github/workflows/benchmark_msbuild.yaml
@@ -10,10 +10,6 @@ env:
   DOTNET_CLI_TELEMETRY_OPTOUT: true
 jobs:
   msbuild_benchmarks_windows:
-    strategy:
-      matrix:
-        TEST_CASES: []
-      fail-fast: false
     runs-on: windows-latest
     steps:
       #__________WE CHECK OUT TO WORKING REPO__________#
@@ -35,10 +31,6 @@ jobs:
           python msbuild_performance_test_windows.py
 
   msbuild_benchmarks_linux:
-    strategy:
-      matrix:
-        TEST_CASES: []
-      fail-fast: false
     runs-on: ubuntu-latest
     steps:
       #__________WE CHECK OUT TO WORKING REPO__________#
@@ -52,7 +44,7 @@ jobs:
           python-version: 3.11
 
       #__________FINALLY WE RUN BENCHMARK TEST AND MEASURE EXECUTION TIME__________#
-      - name: run benchmark for windows
+      - name: run benchmark for linux
         working-directory: scripts/test_cases/
         run: |
           python -m pip install --upgrade pip
