--- a/scripts/test_cases/.pylintrc
+++ b/scripts/test_cases/.pylintrc
@@ -1,2 +1,2 @@
 [pylint.messages control]
-disable = unused-variable, line-too-long, invalid-name, redefined-outer-name, unused-argument, duplicate-code
+disable = unused-variable, line-too-long, invalid-name, redefined-outer-name, unused-argument, duplicate-code, too-many-locals, too-many-arguments
