--- a/.github/workflows/benchmark_msbuild.yaml
+++ b/.github/workflows/benchmark_msbuild.yaml
@@ -16,6 +16,7 @@ jobs:
           - large_app_with_private_packages_centralised_ngbv_removed_windows
           - orleans_windows
           - orchardcore_windows
+          - nuget_windows
       fail-fast: false
     runs-on: windows-latest
     steps:
@@ -44,6 +45,7 @@ jobs:
           - large_app_with_private_packages_centralised_ngbv_removed_linux
           - orleans_linux
           - orchardcore_linux
+          - nuget_linux
       fail-fast: false
     runs-on: ubuntu-latest
     steps:
